--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 10 13:50:11 GMT 2008 Mark McLoughlin <markmc@redhat.com>
+
+	* src/iptables.c: Re-name the "flipflop" variable to "command_idx"
+	
 Thu Jan 10 13:49:01 GMT 2008 Mark McLoughlin <markmc@redhat.com>
 
 	* src/iptables.c:  make use of virFileMakePath(),
