--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jan 10 13:51:00 GMT 2008 Mark McLoughlin <markmc@redhat.com>
+
+	* src/iptables.c: Include the iptables command and chain
+	name in the saved rules files
+
 Thu Jan 10 13:50:11 GMT 2008 Mark McLoughlin <markmc@redhat.com>
 
 	* src/iptables.c: Re-name the "flipflop" variable to "command_idx"
