--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 10 14:40:53 GMT 2008 Mark McLoughlin <markmc@redhat.com>
+
+	* src/iptables.c: fix an unused variable warning.
+
 Thu Jan 10 13:59:15 GMT 2008 Mark McLoughlin <markmc@redhat.com>
 
 	* src/iptables.[ch]: add iptablesSaveRules(), and don't
