--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jan 13 22:53:53 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Fix crash when server has auth type
+	enabled but client has no auth callback
+
 Thu Jan 10 14:40:53 GMT 2008 Mark McLoughlin <markmc@redhat.com>
 
 	* src/iptables.c: fix an unused variable warning.
