Re-factor auth code to make clearer (Jim Meyering)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jan 13 22:59:53 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Refactor code to make error patches
+	clearer (Jim Meyering).
+
 Sun Jan 13 22:53:53 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/remote_internal.c: Fix crash when server has auth type
