Support VNC keymap option with QEMU (Daniel Hokka Zakrisson)

--- a/AUTHORS
+++ b/AUTHORS
@@ -39,6 +39,7 @@ Patches have also been contributed by:
   Jim Paris            <jim@jtan.com>
   Chris Lalancette     <clalance@redhat.com>
   Guido Guenther       <agx@sigxcpu.org>
+  Daniel Hokka Zakrisson <daniel@hozac.com>
 
   [....send patches to get your name here....]
 
