docs/examples/examples.xml: Regenerate, now that *.c file names are sorted.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jan 15 16:25:57 CET  Jim Meyering  <meyering@redhat.com>
+
+	* docs/examples/examples.xml: Regenerate, now that *.c file names
+	are sorted.
+
 Tue Jan 15 10:01:53 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.h, src/qemu_conf.c: Add support for 'keymap'
