--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jan 20 10:54:22 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xend_internal.c: Fix nodeinfo compat with Xen 3.2.0 and
+	add sanity checking of data
+
 Sat Jan 19 13:32:22 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/configure.in: enable debug by default. print status of
