--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Jan 21 10:52:04 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* python/generator.py: Abort with non-zero status if any functions
+	are marked as failed.
+	* python/libvir.c: Don't do manual virDomainFree/virNetworkFree/
+	virConnectFree since the generator creates them without issue
+
 Mon Jan 21 10:39:04 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* python/generator.py: mark VCPU / schedular related functions
