--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan 21 18:03:47 CET 2008  Jim Meyering  <meyering@redhat.com>
+
+	Avoid "may be used uninitialized" warning.
+	* tests/xmconfigtest.c (testCompareParseXML): Initialize "old_priv".
+
 Mon Jan 21 11:18:04 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/hash.c: Split the virFree* functions into virUnref*
