--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 23 14:36:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: Fix enablement of SASL
+
 Wed Jan 23 14:47:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	Portability improvements for Mac OS X.
