--- a/virsh.1
+++ b/virsh.1
@@ -409,7 +409,7 @@ anymore.
 .IP "\fBresume\fR \fIdomain-id\fR" 4
 .IX Item "resume domain-id"
 Moves a domain out of the suspended state.  This will allow a previously
-suspended domain to now be eligible for scheduling by the the underlying
+suspended domain to now be eligible for scheduling by the underlying
 hypervisor.
 .IP "\fBttyconsole\fR \fIdomain-id\fR" 4
 .IX Item "ttyconsole domain-id"
