--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Tue Jan 29 18:39:25 CET 2008  Jim Meyering  <meyering@redhat.com>
 
+	Enable the po-check test; fix violations.
+	* Makefile.cfg (local-checks-to-skip) [po-check]: Enable.
+	* po/POTFILES.in: Add three file names.  Sort.
+
 	Update from gnulib
 	* lib/poll.c: Update.
 	* lib/string.in.h: Update.
