--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 Tue Jan 29 18:39:25 CET 2008  Jim Meyering  <meyering@redhat.com>
 
+	Enable the <assert.h>-checking test; fix violations.
+	* Makefile.cfg (local-checks-to-skip)
+	[sc_prohibit_assert_without_use]: Enable.
+	* qemud/mdns.c: Don't include <assert.h>; no uses of assert here.
+	* qemud/qemud.c: Likewise.
+	* qemud/remote.c: Likewise.
+
 	Enable the po-check test; fix violations.
 	* Makefile.cfg (local-checks-to-skip) [po-check]: Enable.
 	* po/POTFILES.in: Add three file names.  Sort.
