--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Tue Jan 29 18:39:25 CET 2008  Jim Meyering  <meyering@redhat.com>
 
+	Enable two more tests.
+	* Makefile.cfg (local-checks-to-skip)
+	[sc_cast_of_x_alloc_return_value, sc_cast_of_argument_to_free]: Enable.
+
 	Enable the <assert.h>-checking test; fix violations.
 	* Makefile.cfg (local-checks-to-skip)
 	[sc_prohibit_assert_without_use]: Enable.
