--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Jan 30 11:35:25 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xend_internal.c: Fix SXPR -> XML conversion for USB
+	devices.
+	* tests/sexpr2xmldata/sexpr2xml-fv-usbmouse.sexpr,
+	tests/sexpr2xmldata/sexpr2xml-fv-usbtablet.sexpr: Fix test
+	case SXPR to actually match what XenD produces for USB devices.
+
 Wed Jan 30 07:54:25 CET 2008  Jim Meyering  <meyering@redhat.com>
 
 	Arrange for "make syntax-check" to pass.
