--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 30 13:18:25 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/hash.c: Remove double mutex lock() flaw
+
 Wed Jan 30 11:35:25 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/xend_internal.c: Fix SXPR -> XML conversion for USB
