Avoid segfault upon malloc failure, and plug a leak.
* src/test.c (testDomainSave): Detect testDomainDumpXML failure.  Free "xml".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Wed Jan 30 20:49:34 CET 2008  Jim Meyering  <meyering@redhat.com>
 
+	Avoid segfault upon malloc failure, and plug a leak.
+	* src/test.c (testDomainSave): Detect testDomainDumpXML failure.
+	Free "xml".
+
 	Plug test-related leaks.
 	* src/test.c (testLoadNetwork): Free forwardDev.
 	(testLoadDomain): Free ctxt.
