Avoid virsh leaks due to missing virDomainFree(dom) calls
* src/virsh.c (cmdDomuuid): Add missing virDomainFree call.
(cmdAttachDevice): Likewise.
(cmdDetachDevice): Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Wed Jan 30 20:49:34 CET 2008  Jim Meyering  <meyering@redhat.com>
 
+	Avoid virsh leaks due to missing virDomainFree(dom) calls
+	* src/virsh.c (cmdDomuuid): Add missing virDomainFree call.
+	(cmdAttachDevice): Likewise.
+	(cmdDetachDevice): Likewise.
+
 	* src/virsh.c (cmdCapabilities): Plug a small leak.
 
 	* src/test.c (testLoadDomain): Avoid leaks upon failure.
