--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jan 31 20:12:40 CET 2008  Guido Guenther  <agx@sigxcpu.org>
+
+	Avoid compilation failure when building --without-xen.
+	* tests/statstest.c (testDevice) [!WITH_XEN]: #ifdef-out.
+	(main) [!WITH_XEN]: #ifdef-out the body.
+
 Wed Jan 30 20:49:34 CET 2008  Jim Meyering  <meyering@redhat.com>
 
 	Avoid virsh leaks due to missing virDomainFree(dom) calls
